--- a/components/styles.css
+++ b/components/styles.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
+
+.title {
+  @apply bg-blue-100;
+  @apply text-center;
+  @apply p-5;
+  @apply font-mono;
+  @apply text-xl;
+  @apply text-green-800;
+}
+
 @tailwind utilities;
