--- a/components/styles.css
+++ b/components/styles.css
@@ -9,5 +9,80 @@
   @apply text-xl;
   @apply text-green-800;
 }
+ main {
+   margin-top: 47px;
+ }
+.toolbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: darkblue;
+}
+.toolbar__navigation {
+  display: flex;
+  height: 100%;
+  padding: 0 1rem;
+  align-items: center;
+}
+
+.toolbar__navigation-items a {
+  color: whitesmoke;
+  text-decoration: none;
+}
+
+.toolbar__navigation-items a:hover,
+.toolbar__navigation-items a:hover {
+  color: lightskyblue;
+}
+
+.toolbar__navigation-items ul {
+list-style: none;
+margin: 0;
+padding: 0;
+display: flex;
+}
+
+.toolbar__navigation-items li {
+  padding: 0 0.5rem;
+  }
+
+.toolbar__logo a {
+  color: whitesmoke;
+  text-decoration: none;
+  font-size: 2rem;
+}
+
+.toolbar__logo {
+  margin-left: 0.5rem;
+}
+
+.spacer {
+  flex: 1;
+}
+
+.toggle {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 24px;
+  width: 30px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.toggle:focus {
+outline: none;
+}
+
+.toggle__line {
+  width: 100%;
+  height: 1px;
+  background: whitesmoke;
+  z-index: 999;
+}
 
 @tailwind utilities;
